index.html file is changed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="copy-container">
             <h1>Hello World<span>.</span></h1>
             <h2>Let's learn to code</h2>
+            <h2>Adding more content</h2>
         </div>
         <div class="contents">
             <h3>Lessons</h3>
